new image is set and directed to html file

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div class="img-about">
             <div class="img">
-                <img id="mypic" src="1716998497122.jpg" alt="vaishnavi_image">
+                <img id="mypic" src="myimage.jpg" alt="vaishnavi_image">
             </div>
 
             <div class="about">
