new image is set and directed to html file

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <div class="about">
             <section id="about">
-            <h1 class="h1"><b>Hi There,<BR> I'm KUMARI VAISHNAVI</b></h1>
+            <h1 class="h1"><b>Hi There,<BR> I'm KUMARI VAISHNAVI!</b></h1>
             <p>I'm a <b><i>Full Stack Web Developer</i></b>.</p>
             <p>I am aspiring web developer specializing in building websites.</p>
             </section>
